--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ version = "0.2.1"
 default-features = false
 version = "1.0.2"
 
+[dependencies]
+embedded-hal="^0.1"
+
 [dependencies.nb]
 version = "0.1.1"
 
