--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT OR Apache-2.0"
 name = "embedded-hal"
 readme = "README.md"
 repository = "https://github.com/japaric/embedded-hal"
-version = "0.2.1"
+version = "0.2.2"
 
 [dependencies.void]
 default-features = false
@@ -21,8 +21,8 @@ version = "1.0.2"
 version = "0.1.1"
 
 [dependencies.embedded-hal]
-version= "0.3.0"
-path = "../new"
+git = "https://github.com/ryankurte/embedded-hal"
+tag = "v0.3.0"
 features = ["unproven"]
 
 [dev-dependencies]
